--- a/style/style.css
+++ b/style/style.css
@@ -118,11 +118,12 @@ padding: 1rem;
 
 form {
     background-color: #fff;
-    padding: 30px;
+    padding: 15px;
+    
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     max-width: 600px;
-    margin: 0 auto;
+    margin: 2rem auto;
 }
 label {
     display: block;
@@ -163,4 +164,13 @@ input[type="submit"] {
 }
 input[type="submit"]:hover {
     background-color: #45a049;
+}
+.contain{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.error{
+    color: red;
 }
