--- a/style/style.css
+++ b/style/style.css
@@ -1,176 +1,461 @@
+@import url("https://fonts.googleapis.com/css?family=Audiowide&display=swap");
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    width: 100%;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 header {
-    width: 100%;
-    background-color: #333; /* Couleur de fond du header */
-    padding: 10px 0; /* Espacement vertical */
-    display: flex;
-    justify-content: space-between;
+  width: 100%;
+  background-color: #333; /* Couleur de fond du header */
+  padding: 10px 0; /* Espacement vertical */
+  display: flex;
+  justify-content: space-between;
 }
 
 .nav-header {
-    display: flex;
-    justify-content: center; /* Centre les éléments horizontalement */
-    
+  display: flex;
+  justify-content: center; /* Centre les éléments horizontalement */
 }
 
 .nav-header ul {
-    list-style-type: none; /* Retire les puces de la liste */
-    margin: 0;
-    padding: 0;
-    display: flex; /* Affiche les éléments en ligne */
+  list-style-type: none; /* Retire les puces de la liste */
+  margin: 0;
+  padding: 0;
+  display: flex; /* Affiche les éléments en ligne */
 }
 
 .nav-header li {
-    margin: 0 15px; /* Espacement entre les éléments de la liste */
+  margin: 0 15px; /* Espacement entre les éléments de la liste */
 }
 
 .nav-header a {
-    text-decoration: none; /* Retire le soulignement des liens */
-    color: white; /* Couleur du texte */
-    font-size: x-large; /* Taille de la police */
-    padding: 10px 15px; /* Espacement intérieur des liens */
-    transition: background-color 0.3s, color 0.3s; /* Animation pour les effets de survol */
+  text-decoration: none; /* Retire le soulignement des liens */
+  color: white; /* Couleur du texte */
+  font-size: x-large; /* Taille de la police */
+  padding: 10px 15px; /* Espacement intérieur des liens */
+  transition: background-color 0.3s, color 0.3s; /* Animation pour les effets de survol */
 }
 
 /* Effet de survol (hover) */
 .nav-header a:hover {
-    background-color: #575757; /* Couleur de fond au survol */
-    color: #ffcc00; /* Couleur du texte au survol */
-    border-radius: 5px; /* Coins arrondis */
+  background-color: #575757; /* Couleur de fond au survol */
+  color: #ffcc00; /* Couleur du texte au survol */
+  border-radius: 5px; /* Coins arrondis */
 }
 
 footer {
-    background-color: #333; /* Couleur de fond du footer */
-    color: white; /* Couleur du texte */
-    padding: 20px 0; /* Espacement vertical */
-    position: relative;
-    bottom: 0;
-    width: 100%;
+  background-color: #333; /* Couleur de fond du footer */
+  color: white; /* Couleur du texte */
+  padding: 20px 0; /* Espacement vertical */
+  position: relative;
+  bottom: 0;
+  width: 100%;
 }
 
 .nav-footer {
-    display: flex;
-    justify-content: space-around; /* Répartit les éléments horizontalement */
-    align-items: center; /* Centre les éléments verticalement */
-    flex-wrap: wrap; /* Permet le retour à la ligne des éléments */
+  display: flex;
+  justify-content: space-around; /* Répartit les éléments horizontalement */
+  align-items: center; /* Centre les éléments verticalement */
+  flex-wrap: wrap; /* Permet le retour à la ligne des éléments */
 }
 
 .footer-links,
 .footer-contact {
-    list-style-type: none; /* Retire les puces de la liste */
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column; /* Affiche les éléments en colonne */
-    align-items: center;
+  list-style-type: none; /* Retire les puces de la liste */
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column; /* Affiche les éléments en colonne */
+  align-items: center;
 }
 
 .footer-links li,
 .footer-contact li {
-    margin: 5px 0; /* Espacement vertical entre les éléments */
+  margin: 5px 0; /* Espacement vertical entre les éléments */
 }
 
 .footer-links a,
 .footer-contact a {
-    text-decoration: none; /* Retire le soulignement des liens */
-    color: white; /* Couleur des liens */
-    transition: color 0.3s; /* Animation pour les effets de survol */
+  text-decoration: none; /* Retire le soulignement des liens */
+  color: white; /* Couleur des liens */
+  transition: color 0.3s; /* Animation pour les effets de survol */
 }
-
 
 .footer-links a:hover,
 .footer-contact a:hover {
-    color: #ffcc00; 
+  color: #ffcc00;
 }
-
 
 main {
-    flex: 1;
+  flex: 1;
+}
+.contact-main {
+  background-image: url(../image/federico-respini-sYffw0LNr7s-unsplash.jpg);
+  background-size: cover;
 }
 
-
-.title-page{
-
-   position: absolute;
-   top: 0;
-   left: 45%;
-   color: white;
+.title-page {
+  position: absolute;
+  top: 0;
+  left: 45%;
+  color: white;
 }
+
 .container {
-width: 100%;
-height: 90vh;
-padding: 1rem;
+  width: 100%;
+  height: 90vh;
+  padding: 1rem;
 }
-
-
 
 form {
-    background-color: #fff;
-    padding: 15px;
-    
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    max-width: 600px;
-    margin: 2rem auto;
+  backdrop-filter: blur(20px);
+  border: 2px solid rgba(255, 255, 255, 0.425);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  padding: 15px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-width: 600px;
+  margin: 2rem auto;
 }
 label {
-    display: block;
-    margin-bottom: 8px;
+  font-weight: bolder;
+  display: block;
+  margin-bottom: 8px;
+  margin-top: 8px;
 }
 input[type="text"],
 input[type="email"],
 select,
 textarea {
-    width: calc(100% - 20px);
-    padding: 8px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 14px;
+  width: calc(100% - 20px);
+  padding: 8px;
+  margin-bottom: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 14px;
 }
 select {
-    width: 100%;
+  width: calc(100% - 20px);
+  padding: 8px;
 }
 input[type="radio"] {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 textarea {
-    height: 150px;
+  height: 150px;
 }
 input[type="submit"] {
   align-items: center;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    border-radius: 4px;
-    cursor: pointer;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 4px;
+  cursor: pointer;
 }
 input[type="submit"]:hover {
-    background-color: #45a049;
+  background-color: #45a049;
 }
-.contain{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+.contain {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
-.error{
-    color: red;
+.error {
+  font-weight: bolder;
+  color: red;
+}
+
+.page404 {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  height: 100%;
+  width: 100%;
+  margin: 0px;
+  background: radial-gradient(circle, #240015 0%, #12000b 100%);
+  overflow: hidden;
+}
+
+.wrap {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.h2404 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: 150px;
+  font-size: 32px;
+  text-transform: uppercase;
+  transform: translate(-50%, -50%);
+  display: block;
+  color: #12000a;
+  font-weight: 300;
+  font-family: Audiowide;
+  text-shadow: 0px 0px 4px #12000a;
+  animation: fadeInText 3s ease-in 3.5s forwards,
+    flicker4 5s linear 7.5s infinite, hueRotate 6s ease-in-out 3s infinite;
+}
+
+#svgWrap_1,
+#svgWrap_2 {
+  position: absolute;
+  height: auto;
+  width: 600px;
+  max-width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#svgWrap_1,
+#svgWrap_2,
+.page404 {
+  animation: hueRotate 6s ease-in-out 3s infinite;
+}
+
+#id1_1,
+#id2_1,
+#id3_1 {
+  stroke: #ff005d;
+  stroke-width: 3px;
+  fill: transparent;
+  filter: url(#glow);
+}
+
+#id1_2,
+#id2_2,
+#id3_2 {
+  stroke: #12000a;
+  stroke-width: 3px;
+  fill: transparent;
+  filter: url(#glow);
+}
+
+#id3_1 {
+  stroke-dasharray: 940px;
+  stroke-dashoffset: -940px;
+  animation: drawLine3 2.5s ease-in-out 0s forwards,
+    flicker3 4s linear 4s infinite;
+}
+
+#id2_1 {
+  stroke-dasharray: 735px;
+  stroke-dashoffset: -735px;
+  animation: drawLine2 2.5s ease-in-out 0.5s forwards,
+    flicker2 4s linear 4.5s infinite;
+}
+
+#id1_1 {
+  stroke-dasharray: 940px;
+  stroke-dashoffset: -940px;
+  animation: drawLine1 2.5s ease-in-out 1s forwards,
+    flicker1 4s linear 5s infinite;
+}
+
+@keyframes drawLine1 {
+  0% {
+    stroke-dashoffset: -940px;
+  }
+  100% {
+    stroke-dashoffset: 0px;
+  }
+}
+
+@keyframes drawLine2 {
+  0% {
+    stroke-dashoffset: -735px;
+  }
+  100% {
+    stroke-dashoffset: 0px;
+  }
+}
+
+@keyframes drawLine3 {
+  0% {
+    stroke-dashoffset: -940px;
+  }
+  100% {
+    stroke-dashoffset: 0px;
+  }
+}
+
+@keyframes flicker1 {
+  0% {
+    stroke: #ff005d;
+  }
+  1% {
+    stroke: transparent;
+  }
+  3% {
+    stroke: transparent;
+  }
+  4% {
+    stroke: #ff005d;
+  }
+  6% {
+    stroke: #ff005d;
+  }
+  7% {
+    stroke: transparent;
+  }
+  13% {
+    stroke: transparent;
+  }
+  14% {
+    stroke: #ff005d;
+  }
+  100% {
+    stroke: #ff005d;
+  }
+}
+
+@keyframes flicker2 {
+  0% {
+    stroke: #ff005d;
+  }
+  50% {
+    stroke: #ff005d;
+  }
+  51% {
+    stroke: transparent;
+  }
+  61% {
+    stroke: transparent;
+  }
+  62% {
+    stroke: #ff005d;
+  }
+  100% {
+    stroke: #ff005d;
+  }
+}
+
+@keyframes flicker3 {
+  0% {
+    stroke: #ff005d;
+  }
+  1% {
+    stroke: transparent;
+  }
+  10% {
+    stroke: transparent;
+  }
+  11% {
+    stroke: #ff005d;
+  }
+  40% {
+    stroke: #ff005d;
+  }
+  41% {
+    stroke: transparent;
+  }
+  45% {
+    stroke: transparent;
+  }
+  46% {
+    stroke: #ff005d;
+  }
+  100% {
+    stroke: #ff005d;
+  }
+}
+
+@keyframes flicker4 {
+  0% {
+    color: #ff005d;
+    text-shadow: 0px 0px 4px #ff005d;
+  }
+  30% {
+    color: #ff005d;
+    text-shadow: 0px 0px 4px #ff005d;
+  }
+  31% {
+    color: #12000a;
+    text-shadow: 0px 0px 4px #12000a;
+  }
+  32% {
+    color: #ff005d;
+    text-shadow: 0px 0px 4px #ff005d;
+  }
+  36% {
+    color: #ff005d;
+    text-shadow: 0px 0px 4px #ff005d;
+  }
+  37% {
+    color: #12000a;
+    text-shadow: 0px 0px 4px #12000a;
+  }
+  41% {
+    color: #12000a;
+    text-shadow: 0px 0px 4px #12000a;
+  }
+  42% {
+    color: #ff005d;
+    text-shadow: 0px 0px 4px #ff005d;
+  }
+  85% {
+    color: #ff005d;
+    text-shadow: 0px 0px 4px #ff005d;
+  }
+  86% {
+    color: #12000a;
+    text-shadow: 0px 0px 4px #12000a;
+  }
+  95% {
+    color: #12000a;
+    text-shadow: 0px 0px 4px #12000a;
+  }
+  96% {
+    color: #ff005d;
+    text-shadow: 0px 0px 4px #ff005d;
+  }
+  100% {
+    color: #ff005d;
+    text-shadow: 0px 0px 4px #ff005d;
+  }
+}
+
+@keyframes fadeInText {
+  1% {
+    color: #12000a;
+    text-shadow: 0px 0px 4px #12000a;
+  }
+  70% {
+    color: #ff005d;
+    text-shadow: 0px 0px 14px #ff005d;
+  }
+  100% {
+    color: #ff005d;
+    text-shadow: 0px 0px 4px #ff005d;
+  }
+}
+
+@keyframes hueRotate {
+  0% {
+    filter: hue-rotate(0deg);
+  }
+  50% {
+    filter: hue-rotate(-120deg);
+  }
+  100% {
+    filter: hue-rotate(0deg);
+  }
 }
